crates/toml/tests/snapshots/invalid/key/no-eol-01.stderr
TOML parse error at line 1, column 9
  |
1 | a = 1 b = 2
  |         ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 1, column 5
  |
1 | a = 1 b = 2
  |     ^^^
string values must be quoted, expected literal string
